syntax = "proto3";
package internal;

message Exploration {
	int64 ID = 1;
	string Name = 2;
	int64 UserID = 3;
	string Data = 4;
	int64 CreatedAt = 5;
	int64 UpdatedAt = 6;
}
